--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.4.0",
-    "@testing-library/user-event": "7.2.1",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
+    "@testing-library/user-event": "13.2.1",
     "history": "4.9.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "react-pose": "4.0.10",
-    "react-router-dom": "5.0.1",
-    "react-scripts": "3.3.0",
+    "react-router-dom": "5.2.1",
+    "react-scripts": "4.0.3",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.88.2"
+    "semantic-ui-react": "1.3.1",
+    "emailjs-com": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
