--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.0.0",
-    "@testing-library/user-event": "13.2.1",
-    "history": "4.9.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-pose": "4.0.10",
-    "react-router-dom": "5.2.1",
-    "react-scripts": "4.0.3",
-    "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "1.3.1",
-    "emailjs-com": "3.2.0"
+    "@emailjs/browser": "4.4.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "7.3.5",
+    "@mui/material": "7.3.5",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "cookie": "^1.0.2",
+    "history": "5.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.28.0",
+    "react-scripts": "5.0.1",
+    "set-cookie-parser": "2.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "eslintConfig": {
     "extends": "react-app"
