--- a/package.json
+++ b/package.json
@@ -1,29 +1,59 @@
 {
   "name": "posadskiy-website",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "contentlayer2 build && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "postinstall": "next telemetry disable && contentlayer2 build"
+  },
   "dependencies": {
-    "@emailjs/browser": "4.4.1",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.1",
-    "@mui/icons-material": "7.3.5",
-    "@mui/material": "7.3.5",
+    "@emotion/is-prop-valid": "^1.4.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@vercel/analytics": "^1.3.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.23",
+    "lucide-react": "^0.462.0",
+    "next": "15.0.3",
+    "next-themes": "^0.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.0",
+    "resend": "^3.1.0",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "cookie": "^1.0.2",
-    "history": "5.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "6.28.0",
-    "react-scripts": "5.0.1",
-    "set-cookie-parser": "2.7.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "10.4.20",
+    "contentlayer2": "^0.5.8",
+    "eslint": "^9.11.1",
+    "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
+    "next-contentlayer2": "^0.5.8",
+    "postcss": "8.4.47",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "3.4.14",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": ">=18.0.0",
