--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-#idea
-.idea
-
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
+/dist
 
-# misc
+# Misc
 .DS_Store
 .env.local
 .env.development.local
@@ -24,5 +20,19 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-yarn.lock
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Vite
+*.local
+
+# TypeScript
+*.tsbuildinfo
