--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Posadskiy",
+  "name": "Dimitri Posadskiy",
   "icons": [
     {
       "src": "black-circle/logo-black-circle-32.ico",
